--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "php": "~5.5.0|~5.6.0|~7.0.0",
         "magento/module-customer": "100.1.*",
         "gigya/cms-starter-kit": "^1.1.7",
-        "gigya/magento2-im": "~5.0.0"
+        "gigya/magento2-im": "dev-develop"
     },
     "autoload": {
         "files": [
