--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "require": {
         "php": "~5.5.0|~5.6.0|~7.0.0",
         "magento/module-customer": "100.1.*",
-        "gigya/magento2-im": "dev-develop"
+        "gigya/magento2-im": "5.0.*"
     },
     "autoload": {
         "files": [
